--- a/css/styles.css
+++ b/css/styles.css
@@ -562,6 +562,13 @@ border: 1px solid rgba(33, 150, 243, 1);
   border: 1px solid rgba(0, 0, 0, 0.1);
 
   cursor: pointer;
+
+  transition: fill var(--timing--) var(--cubik--);
+
+}
+
+.modaloff:hover{
+  fill: var(--accent-text-color);
 }
 
 .modal-icon{
@@ -573,30 +580,143 @@ border: 1px solid rgba(33, 150, 243, 1);
 }
 
 .form{
-  outline:1px solid tomato;
   margin-top: 44px;
   margin-left: 40px;
   margin-right: 40px;
 }
 .form-title{
   display: block;
+  text-align: center;
+
+  color: var(--primary-text-color);
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  letter-spacing: 0.03em;
+
   margin-bottom: 12px;
 }
-.form-group{
+.form-group {
+  position: relative;
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
+}
+.form-group-lable {
+  margin-bottom: 4px;
+  color: var(--secondary-text-color);
+}
+
+.form-group-input {
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  padding-left: 42px;
+  padding-right: 42px;
+}
+
+.form-group-input:hover,
+.form-group-input:focus{
+  border-color: var(--accent-text-color);
+}
+
+.form-group-icon{
+  fill: var(--black-logo-color);
+}
+
+.form-group-textarea{
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  padding-left: 16px;
+  padding-top: 12px;
+
+
+}
+.form-group-textarea:hover{
+  border-color: var(--accent-text-color);
+}
+.form-group-icon {
+  position: absolute;
+  bottom: 11px;
+  left: 12px;
 }
 
 textarea{
   resize: none;
 }
 
+textarea::placeholder-shown { 
+  color: rgba(117, 117, 117, 0.502);
+  padding-top: 12px;
+  padding-left: 16px;
+}
+
 .form-terms{
   display: block;
 }
+
+.form-terms-label{
+  margin-bottom: 4px;
+  color: var(--secondary-text-color);
+}
+
+.form-terms-info{
+display: inline-block;
+color: var(--secondary-text-color);
+margin-bottom: 30px;
+user-select: none;
+}
+
+
+
+.form-terms-input:checked+.form-terms-icons .icon-unchecked {
+  opacity: 0;
+}
+
+.icon-unchecked {
+ opacity: 1;
+}
+
+.form-terms-input:checked + .form-terms-icons .icon-checked{
+  opacity: 1;
+}
+
+.icon-checked{
+  opacity: 0;
+}
+
+
+
+
+.form-terms-link{
+color: var(--accent-text-color);
+}
+
+.form-btn{
+  cursor: pointer;
+  color: var(--light-color);
+  background-color: var(--accent-text-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: calc(30 / 16);
+  
+  display: block;
+  width: 200px;
+  margin: auto;
+  padding: 10px 32px;
+  align-items: center;
+  text-align: center;
+  
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: transparent;
+  border-radius: 4px;
+}
 /* footer */
-.footer{
+.footer {
 background-color:var(--hero-footer-bg-color);
 padding-top: 64px;
 padding-bottom: 56px;
@@ -922,6 +1042,68 @@ background-color: var(--accent-text-color);
 
 .footer-icon{
   color:var(--light-color);
+}
+
+.mailing-form{
+ margin-left: 93px;
+}
+
+.mailing-title{
+  display: block;
+  color: var(--light-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  margin-bottom: 20px;
+}
+
+.mailing-input{
+  width: 358px;
+  height: 50px;
+  background-color: var(--hero-footer-bg-color);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  padding-left: 16px;
+}
+
+.mailing-input::placeholder-shown{
+ padding-left: 16px;
+ padding-top: 15px;
+ padding-bottom: 15px;
+}
+
+.mailing-btn{
+  position: relative;
+  cursor: pointer;
+  color: var(--light-color);
+  background-color: var(--accent-text-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: calc(30 / 16);
+  
+  width: 200px;
+  margin: auto;
+  margin-left: 12px;
+  padding: 10px 32px;
+  
+  
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: transparent;
+  border-radius: 4px;
+
+  
+}
+
+.mailing-icon{
+  position: absolute;
+  top: 10px;
+  margin-left: 10px;
+  width: 24px;
+  height: 24px;
 }
  
 
