--- a/css/styles.css
+++ b/css/styles.css
@@ -612,9 +612,12 @@ border: 1px solid rgba(33, 150, 243, 1);
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  outline: none;
 
   padding-left: 42px;
   padding-right: 42px;
+
+  transition: border var(--timing--) var(--cubik--);
 }
 
 .form-group-input:hover,
@@ -622,15 +625,11 @@ border: 1px solid rgba(33, 150, 243, 1);
   border-color: var(--accent-text-color);
 }
 
-.form-group-icon{
-  fill: var(--black-logo-color);
-}
-
 .form-group-textarea{
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-
+  outline: none;
   padding-left: 16px;
   padding-top: 12px;
 
@@ -639,10 +638,17 @@ border: 1px solid rgba(33, 150, 243, 1);
 .form-group-textarea:hover{
   border-color: var(--accent-text-color);
 }
+
+.form-group:hover .form-group-icon{
+ fill: var(--accent-text-color);
+}
+
 .form-group-icon {
   position: absolute;
   bottom: 11px;
   left: 12px;
+
+  transition: fill var(--timing--) var(--cubik--);
 }
 
 textarea{
@@ -679,6 +685,7 @@ user-select: none;
 
 .icon-unchecked {
  opacity: 1;
+ transition: opacity var(--timing--) var(--cubik--);
 }
 
 .form-terms-input:checked + .form-terms-icons .icon-checked{
@@ -687,6 +694,7 @@ user-select: none;
 
 .icon-checked{
   opacity: 0;
+  transition: opacity var(--timing--) var(--cubik--);
 }
 
 
@@ -1068,6 +1076,7 @@ background-color: var(--accent-text-color);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   padding-left: 16px;
+  outline: none;
 }
 
 .mailing-input::placeholder-shown{
@@ -1084,11 +1093,15 @@ background-color: var(--accent-text-color);
   font-weight: 700;
   font-size: 16px;
   line-height: calc(30 / 16);
-  
+
   width: 200px;
-  margin: auto;
+  height: 50px;
+
   margin-left: 12px;
-  padding: 10px 32px;
+  padding-right: 28px;
+  align-items: center;
+  justify-content: center;
+  
   
   
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -1104,6 +1117,8 @@ background-color: var(--accent-text-color);
   margin-left: 10px;
   width: 24px;
   height: 24px;
+
+  justify-content: baseline;
 }
  
 
